Output compile errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,4 @@
-ADD_LIBRARY(rc STATIC rc.c)
+cmake_minimum_required(VERSION 3.12)
+
+add_library(rc STATIC rc.c)
+target_compile_options(rc PRIVATE -Wall -Wextra)
