Remove some explicit conversions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 
 add_library(rc STATIC rc.c)
-target_compile_options(rc PRIVATE -Wall -Wextra)
+target_compile_options(rc PRIVATE -Wall -Wconversion -Wextra)
