Move test binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
+
 add_library(rc STATIC src/rc.c src/rc.h)
 target_compile_options(rc PRIVATE -Wall -Wconversion -Wextra)
 
@@ -11,7 +13,7 @@ foreach(filename ${tests})
   get_filename_component(target ${filename} NAME_WE)
   add_executable(${target} ${filename})
   target_link_libraries(${target} rc)
-  add_test(${target} ${target})
+  add_test(${target} "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${target}")
 endforeach()
 
 install(TARGETS rc DESTINATION lib)
